# ai-agent-bridge

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  Makefile  README.md  setup-vm.sh  start-bridge.sh
.github/workflows/: ci.yml  release.yml
crates/admin-api/: Cargo.toml
crates/admin-api/src/: lib.rs
crates/admin-api/tests/: admin_api_test.rs
crates/agent-acp/: Cargo.toml
crates/agent-acp/src/: jsonrpc.rs  lib.rs  protocol.rs  session.rs
crates/agent-claude-code/: Cargo.toml
crates/agent-claude-code/src/: lib.rs  session.rs  stream_event.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: lib.rs
crates/agent-http/: Cargo.toml
crates/agent-http/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/core-commands/: Cargo.toml
crates/core-commands/src/: lib.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: framing.rs  lib.rs  registry.rs  scheduler.rs  session.rs  store.rs
crates/core-engine/tests/: engine_round_trip.rs  integration_tests.rs
crates/core-traits/: Cargo.toml
crates/core-traits/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  service.rs
crates/media-publisher/: Cargo.toml
crates/media-publisher/src/: azure_blob.rs  lib.rs  local_http.rs
crates/platform-discord/: Cargo.toml
crates/platform-discord/src/: lib.rs
crates/platform-line/: Cargo.toml
crates/platform-line/src/: lib.rs  sign.rs  webhook.rs
crates/platform-slack/: Cargo.toml
crates/platform-slack/src/: envelope.rs  lib.rs  upload.rs
crates/platform-stdio/: Cargo.toml
crates/platform-stdio/src/: lib.rs
crates/platform-telegram/: Cargo.toml
crates/platform-telegram/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
docs/: architecture.md
examples/client-template/: .mcp.json  CLAUDE.md
examples/client-template/.claude/: settings.json
examples/client-template/.claude/skills/csv-analysis/: SKILL.md
examples/client-template/.claude/skills/customer-success-manager/: SKILL.md
examples/client-template/.claude/skills/excel-report/: SKILL.md
examples/client-template/.claude/skills/excel-xlsx/: SKILL.md
examples/client-template/.claude/skills/financial-analyst/: SKILL.md
examples/client-template/.claude/skills/product-manager-toolkit/: SKILL.md
examples/client-template/.claude/skills/research-summarizer/: SKILL.md
examples/client-template/.claude/skills/saas-metrics-coach/: SKILL.md
examples/client-template/.claude/skills/schedule/: SKILL.md
examples/client-template/.claude/skills/scrum-master/: SKILL.md
examples/client-template/.claude/skills/senior-pm/: SKILL.md
examples/client-template/.claude/skills/translate-doc/: SKILL.md
examples/client-template/.claude/skills/voice-call/: SKILL.md  example.env  require.md  voice_call.py
examples/client-template/.claude/skills/web-search/: SKILL.md
examples/client-template/.claude/skills/word-doc/: SKILL.md
examples/client-template/.claude/skills/word-docx/: SKILL.md
prompts/: claude-system.md
