[workspace]
resolver = "2"
members = [
    "crates/core-traits",
    "crates/core-engine",
    "crates/core-commands",
    "crates/agent-claude-code",
    "crates/agent-acp",
    "crates/agent-cli",
    "crates/agent-http",
    "crates/platform-line",
    "crates/platform-slack",
    "crates/platform-stdio",
    "crates/media-publisher",
    "crates/daemon",
    "crates/cli",
    "crates/test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/your-org/ai-agent-bridge"
authors = ["danielshih"]

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
clap = { version = "4.6.1", features = ["derive", "env"] }
axum = "0.8.9"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "stream", "query"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "1.1.2"
fd-lock = "4.0.4"
mockall = "0.14.0"
tempfile = "3.27.0"
eventsource-stream = "0.2.3"
subtle = "2.6.1"
bytes = "1.11.1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
hex = "0.4.3"
futures-util = "0.3.32"
url = "2.5.8"
once_cell = "1.21.4"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
azure_storage = "0.21"
azure_storage_blobs = "0.21"
time = "0.3.47"

# Internal
core-traits = { path = "crates/core-traits" }
core-engine = { path = "crates/core-engine" }
core-commands = { path = "crates/core-commands" }
agent-claude-code = { path = "crates/agent-claude-code" }
agent-acp = { path = "crates/agent-acp" }
agent-cli = { path = "crates/agent-cli" }
agent-http = { path = "crates/agent-http" }
platform-line = { path = "crates/platform-line" }
platform-slack = { path = "crates/platform-slack" }
platform-stdio = { path = "crates/platform-stdio" }
media-publisher = { path = "crates/media-publisher" }
daemon = { path = "crates/daemon" }
test-support = { path = "crates/test-support" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
