[package]
name = "admin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-engine.workspace = true
core-traits.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
test-support = { path = "../test-support" }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
