[package]
name = "agent-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-traits.workspace = true
core-engine.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
dashmap.workspace = true
thiserror.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
