[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-traits.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
