[package]
name = "agent-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-traits.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
uuid.workspace = true
