[package]
name = "core-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-traits.workspace = true
core-commands.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
dashmap.workspace = true
thiserror.workspace = true
futures-util.workspace = true
uuid.workspace = true
rusqlite.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
test-support.workspace = true
tempfile.workspace = true
