[package]
name = "media-publisher"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-http"]
local-http = ["dep:axum"]
azure-blob = ["dep:azure_storage", "dep:azure_storage_blobs", "dep:time"]

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
dashmap.workspace = true
axum = { workspace = true, optional = true }
azure_storage = { workspace = true, optional = true }
azure_storage_blobs = { workspace = true, optional = true }
time = { workspace = true, optional = true }

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }
