[package]
name = "platform-discord"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-traits.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
tracing.workspace = true
futures-util.workspace = true
