[package]
name = "platform-line"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-traits.workspace = true
media-publisher.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
tracing.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
base64.workspace = true
tempfile.workspace = true
bytes.workspace = true
thiserror.workspace = true
futures-util.workspace = true
