[package]
name = "platform-slack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-traits.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tempfile.workspace = true
thiserror.workspace = true
futures-util.workspace = true
url.workspace = true
tokio-tungstenite.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
